--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,19 @@ version: '3.4'
 
 services:
   todoapi:
-    container_name: todoapi
     image: todoapi
     build:
       context: .
       dockerfile: src/TodoTaskManagement.API/Dockerfile
+    container_name: todoapi
     ports: 
       - "5000:80"
     depends_on:
       - sqlserver
   
   sqlserver:
-    container_name: tododb
     image: mcr.microsoft.com/azure-sql-edge:latest
+    container_name: sqlserver
     ports: 
       - "1433:1433"
     environment:
