--- a/src/TodoTaskManagement.API/appsettings.json
+++ b/src/TodoTaskManagement.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-      "TodoDb": "Server=localhost; Database=TodoTaskManagement; User Id=SA; Password=#p@55w0rd#; Trust Server Certificate=True;MultipleActiveResultSets=true;"
+      "TodoDb": "Data Source=sqlserver; Initial Catalog=TodoTaskManagement; User Id=sa; Password=#p@55w0rd#; Trust Server Certificate=True;MultipleActiveResultSets=true;"
     }
 }
