updating the appsettings.json connection values. adding a check clause if no todo items were found adding http status contract to exceptions

--- a/src/TodoTaskManagement.API/appsettings.json
+++ b/src/TodoTaskManagement.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-      "TodoDb": "Data Source=sqlserver; Initial Catalog=TodoTaskManagement; User Id=sa; Password=#p@55w0rd#; Trust Server Certificate=True;MultipleActiveResultSets=true;"
+      "TodoDb": "Server=sqlserver; Database=TodoTaskManagement; User Id=sa; Password=#p@55w0rd#; Trust Server Certificate=True;MultipleActiveResultSets=true;"
     }
 }
